# fs-synchronizer

./: .dockerignore  Cargo.toml  Dockerfile
src/: event_handler.rs  logs.rs  main.rs
src/client/: redis_client.rs
src/event_handler/: file_events.rs  local_file.rs  local_files_event_handler.rs  remote_file.rs  remote_files_event_handler.rs
src/infra/: logs.rs  redis_client.rs
src/store/: local_fs_store.rs  redis_store.rs
