[package]
name = "fs-on-redis"
version = "0.1.0"
authors = ["Thomas Wickham <mackwic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossbeam-channel = "0.4.0"
fern = { version = "0.6", features = ["colored"] }
log = "*"
notify = "4.0.15"
r2d2_redis = "0.13.0"
rand = "0.7"
structopt = "0.3"